--- a/Game Catalogue/View/Base.lproj/Main.storyboard
+++ b/Game Catalogue/View/Base.lproj/Main.storyboard
@@ -7,6 +7,101 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Detail View Controller-->
+        <scene sceneID="E6d-4x-faP">
+            <objects>
+                <viewController storyboardIdentifier="DetailGame" id="iIs-Xp-SOf" customClass="DetailViewController" customModule="GameCatalogue" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rwq-bM-QvZ" customClass="de">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detail Game" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bvp-CJ-IAe">
+                                <rect key="frame" x="11" y="88" width="137" height="29"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slug Game" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sjj-67-6Tk">
+                                <rect key="frame" x="5" y="400" width="400" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="RatingCell" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0I6-35-8SM">
+                                <rect key="frame" x="0.0" y="524" width="414" height="338"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ratings All" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="67E-aF-TDH">
+                                <rect key="frame" x="167" y="478.5" width="88" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XZK-QY-w5Z">
+                                <rect key="frame" x="20" y="125" width="374" height="264"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="264" id="EBF-Ts-Ifg"/>
+                                    <constraint firstAttribute="width" constant="374" id="L0m-Xg-nYA"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="207" translatesAutoresizingMaskIntoConstraints="NO" id="cNP-KJ-ur7">
+                                <rect key="frame" x="20" y="438" width="374" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slug Game" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0c-52-MR2">
+                                        <rect key="frame" x="0.0" y="0.0" width="83.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XeZ-g4-WTV">
+                                        <rect key="frame" x="290.5" y="0.0" width="83.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="4nK-Mj-zgH"/>
+                                    <constraint firstAttribute="height" constant="20.5" id="aXf-Ds-D4w"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6OS-ZP-wdg" firstAttribute="trailing" secondItem="cNP-KJ-ur7" secondAttribute="trailing" constant="20" id="0N0-eT-g50"/>
+                            <constraint firstItem="67E-aF-TDH" firstAttribute="top" secondItem="cNP-KJ-ur7" secondAttribute="bottom" constant="20" id="3Mn-rb-Rp4"/>
+                            <constraint firstItem="6OS-ZP-wdg" firstAttribute="trailing" secondItem="XZK-QY-w5Z" secondAttribute="trailing" constant="20" id="5wp-2h-1HI"/>
+                            <constraint firstItem="bvp-CJ-IAe" firstAttribute="leading" secondItem="6OS-ZP-wdg" secondAttribute="leading" constant="11" id="C2u-ko-WS8"/>
+                            <constraint firstItem="6OS-ZP-wdg" firstAttribute="trailing" secondItem="sjj-67-6Tk" secondAttribute="trailing" constant="9" id="CoC-t9-Ppf"/>
+                            <constraint firstItem="sjj-67-6Tk" firstAttribute="top" secondItem="XZK-QY-w5Z" secondAttribute="bottom" constant="11" id="DHr-vi-3pw"/>
+                            <constraint firstItem="6OS-ZP-wdg" firstAttribute="trailing" secondItem="bvp-CJ-IAe" secondAttribute="trailing" constant="266" id="I9y-30-X7d"/>
+                            <constraint firstItem="0I6-35-8SM" firstAttribute="leading" secondItem="6OS-ZP-wdg" secondAttribute="leading" id="M20-RU-c9C"/>
+                            <constraint firstItem="cNP-KJ-ur7" firstAttribute="top" secondItem="sjj-67-6Tk" secondAttribute="bottom" constant="17.5" id="Sgz-L8-QEF"/>
+                            <constraint firstItem="0I6-35-8SM" firstAttribute="trailing" secondItem="6OS-ZP-wdg" secondAttribute="trailing" id="T46-j6-HX9"/>
+                            <constraint firstItem="XZK-QY-w5Z" firstAttribute="leading" secondItem="6OS-ZP-wdg" secondAttribute="leading" constant="20" id="TLF-Nb-VNc"/>
+                            <constraint firstItem="XZK-QY-w5Z" firstAttribute="top" secondItem="bvp-CJ-IAe" secondAttribute="bottom" constant="8" id="Y3u-sN-lez"/>
+                            <constraint firstItem="0I6-35-8SM" firstAttribute="top" secondItem="67E-aF-TDH" secondAttribute="bottom" constant="25" id="ckN-hi-vHE"/>
+                            <constraint firstItem="bvp-CJ-IAe" firstAttribute="top" secondItem="6OS-ZP-wdg" secondAttribute="top" constant="44" id="hPr-mO-CdR"/>
+                            <constraint firstItem="6OS-ZP-wdg" firstAttribute="trailing" secondItem="67E-aF-TDH" secondAttribute="trailing" constant="159" id="iLI-eZ-Ck4"/>
+                            <constraint firstItem="sjj-67-6Tk" firstAttribute="leading" secondItem="6OS-ZP-wdg" secondAttribute="leading" constant="5" id="il6-TH-R8W"/>
+                            <constraint firstItem="0I6-35-8SM" firstAttribute="bottom" secondItem="6OS-ZP-wdg" secondAttribute="bottom" id="lVY-4b-Nrf"/>
+                            <constraint firstItem="67E-aF-TDH" firstAttribute="leading" secondItem="6OS-ZP-wdg" secondAttribute="leading" constant="167" id="qHD-DU-sTo"/>
+                            <constraint firstItem="cNP-KJ-ur7" firstAttribute="leading" secondItem="6OS-ZP-wdg" secondAttribute="leading" constant="20" id="yi3-bU-UZq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6OS-ZP-wdg"/>
+                    </view>
+                    <connections>
+                        <outlet property="nameGame" destination="sjj-67-6Tk" id="28u-Pd-BcU"/>
+                        <outlet property="photoGame" destination="XZK-QY-w5Z" id="5f6-7H-l2A"/>
+                        <outlet property="ratingGame" destination="XeZ-g4-WTV" id="n1b-iu-WVU"/>
+                        <outlet property="slugGame" destination="E0c-52-MR2" id="idb-du-cTI"/>
+                        <outlet property="tableRating" destination="0I6-35-8SM" id="kSP-Ps-p78"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8hb-CQ-fbr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="-615.40178571428567"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -16,12 +111,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="GameCell" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Q6K-pT-Jek">
-                                <rect key="frame" x="0.0" y="139" width="414" height="733"/>
+                                <rect key="frame" x="0.0" y="160" width="414" height="692"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Game List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yri-tI-LwQ">
-                                <rect key="frame" x="20" y="102" width="113" height="29"/>
+                                <rect key="frame" x="7" y="123" width="113" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <nil key="textColor"/>
